docs/auditor/10.6/admin/subscriptions/manage.md
---
title: "Review and Manage Subscriptions"
description: "Review and Manage Subscriptions"
sidebar_position: 20
---

# Review and Manage Subscriptions

On the main Netwrix Auditor page, navigate to Subscriptions to review a list of your subscriptions.

![subscription](/images/auditor/10.6/admin/subscriptions/subscription.webp)

The table below provides instructions on how to manage your subscriptions.

| To...                           | Do...                                                                                                                                                    |
| ------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Browse subscriptions            | Type the target subscription name in the search bar in the upper part of the Subscriptions window and click the Search icon to review results.           |
| Enable or disable subscriptions | Pick a subscription and select On or Off in the Mode column.                                                                                             |
| Modify subscriptions            | Select the subscription that you want to modify and click Edit at the bottom of the Subscriptions window. Update the subscription and save your changes. |
| Remove subscriptions            | Click ![delete](/images/activitymonitor/7.1/admin/search/query/delete.webp) icon next to the selected subscription.           |
